--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -57,15 +57,14 @@ jobs:
         shell: bash -l {0}
         run: echo ::set-env name=PACKAGE_DIR::$(conda build . --output)
 
+      - uses: actions/upload-artifact@v2
+        with:
+          path: ${{ env.PACKAGE_DIR }}
+
       - name: upload package to dev label on Anaconda Cloud
         if: startsWith(github.ref, 'refs/tags/')
         shell: bash -l {0}
         env: # set access token from GitHub secrets
           anaconda_token: ${{ secrets.Anaconda_BAMwelding }}
         run: |
-          anaconda -t $anaconda_token upload --user BAMwelding --label dev $package_dir
-
-      - uses: actions/upload-artifact@v2
-        if: success()
-        with:
-          path: ${{ env.package_dir }}
+          anaconda -t $anaconda_token upload --user BAMwelding --label dev $PACKAGE_DIR
