convert docstring format to numpydoc style (#34)
* numpy docstring format
* update some docstrings
* add more type-hints

Co-authored-by: Markus Nagel <mark141@mi.fu-berlin.de>
Co-authored-by: Hirthammer <volker.hirthammer@bam.de>

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ exclude =
 [pydocstyle]
 match = (?!__)(?!versioneer)(?!_version).*\.py
 match_dir = [^\.][^\docs].*
+ignore = D203,D213
 
 [tool:pytest]
 addopts = --tb=short --color=yes --cov=weldx --cov-report=term-missing:skip-covered
