--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -23,11 +23,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+        run: git fetch --prune --unshallow --tags # Fetch all history for all tags and branches
 
       - name: Cache conda
         uses: actions/cache@v1
         env:
-          # Increase this value to reset cache if etc/example-environment.yml has not changed
+          # Increase this value to reset cache if ./conda.recipe/build_env.yml has not changed
           CACHE_NUMBER: 0
         with:
           path: ~/conda_pkgs_dir
@@ -39,7 +40,6 @@ jobs:
           auto-update-conda: true
           environment-file: ./conda.recipe/build_env.yml
           activate-environment: build_env
-          channels: conda-forge
           auto-activate-base: false
           use-only-tar-bz2: true # IMPORTANT: This needs to be set for caching to work properly!
 
