--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -23,6 +23,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+      - name: Fetch tags
         run: git fetch --prune --unshallow --tags # Fetch all history for all tags and branches
 
       - name: Cache conda
