--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -20,10 +20,10 @@ jobs:
         os: [ubuntu-18.04]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Fetch tags
-        run: git fetch --prune --unshallow --tags # Fetch all history for all tags and branches
+        uses: actions/checkout@v1
+#
+#      - name: Fetch tags
+#        run: git fetch --prune --unshallow --tags # Fetch all history for all tags and branches
 
       - name: Cache conda
         uses: actions/cache@v1
