Fix typo in .typo-ci.yml

--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -13,7 +13,7 @@ excluded_files:
 excluded_words:
   - typoci
   # weldx ---------------------------------------
-  - LocalCoodinateSystem
+  - LocalCoordinateSystem
   # python packages -----------------------------
   - asdf
   - numpy
