Update coordinate system tutorial (#36)
* Update coordinate system tutorial text and code
* Add time dependency section
* Add xarray section
* Rename some variables
* Modify and test implementation of plot_coordinate_system
* Hide code related to plotting in jupyter notebooks

--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -12,6 +12,8 @@ excluded_files:
 
 excluded_words:
   - typoci
+  # weldx ---------------------------------------
+  - LocalCoordinateSystem
   # python packages -----------------------------
   - asdf
   - numpy
@@ -78,6 +80,8 @@ excluded_words:
   # conda ---------------------------------------
   - conda
   - noarch
+  # markdown / latex ----------------------------
+  - cdot
   # other ---------------------------------------
   - addopts
   - csm
