--- a/weldx/asdf/schemas/weldx.bam.de/weldx/debug/unit_val_testclass-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/debug/unit_val_testclass-1.0.0.yaml
@@ -5,32 +5,34 @@ id: "http://weldx.bam.de/schemas/weldx/debug/unit_val_testclass-1.0.0"
 tag: "tag:weldx.bam.de:weldx/debug/unit_val_testclass-1.0.0"
 
 title: |
-  demonstration schema for wx_unit validator
+  simple demonstration schema for wx_unit and wx_shape validator
 type: object
 properties:
   length_prop:
     description: |
-      a length
+      a simple length quantity
     $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
 
   velocity_prop:
     description: |
-      a velocity
+      a simple velocity quantity
     $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
 
   current_prop:
     description: |
-      a current
+      a current quantity of shape [2,2]
     $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
 
   nested_prop:
     description: |
-      a current
+      a nested object with two quantities
     type: object
     properties:
       q1:
+        description: a length
         $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
       q2:
+        description: a volume
         $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
 
 
