--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/iso_groove-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/iso_groove-1.0.0.yaml
@@ -72,6 +72,9 @@ anyOf:
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
+    wx_unit:
+      components:
+        t: "m"
 
   # Single U Groove
   - type: object
