--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/iso_groove-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/iso_groove-1.0.0.yaml
@@ -72,9 +72,6 @@ anyOf:
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
-    wx_unit:
-      components:
-        t: "m"
 
   # Single U Groove
   - type: object
@@ -374,4 +371,19 @@ anyOf:
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
+
+wx_unit:
+  components:
+    t: "m"
+    t_1: "m"
+    t_2: "m"
+    alpha: "degree"
+    beta: "degree"
+    beta_1: "degree"
+    beta_2: "degree"
+    R: "m"
+    R2: "m"
+    b: "m"
+    c: "m"
+
 ...
