--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
@@ -14,10 +14,13 @@ properties:
     $ref: tag:weldx.bam.de:weldx/core/xarray/data_array-1.0.0
   coordinates:
     $ref: tag:weldx.bam.de:weldx/core/xarray/data_array-1.0.0
-
-
 required: [orientation, coordinates]
-
 flowStyle: block
 additionalProperties: false
+
+wx_shape:
+  orientation:
+    data: [3, 3]
+  coordinates:
+    data: [3]
 ...
