Adjust LCS to new validator version

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
@@ -18,6 +18,7 @@ required: [orientation, coordinates]
 flowStyle: block
 additionalProperties: false
 
+wx_shape_validate: true
 wx_shape:
   orientation:
     data: [3, 3]
