revert to simple validation syntax

--- a/scripts/asdf_unit_validator.yaml
+++ b/scripts/asdf_unit_validator.yaml
@@ -8,14 +8,14 @@ asdf_library: !core/software-1.0.0 {author: Space Telescope Science Institute, h
 history:
   extensions:
   - !core/extension_metadata-1.0.0
-    extension_class: asdf.extension.BuiltinExtension
-    software: !core/software-1.0.0 {name: asdf, version: 2.6.0}
+    extension_class: weldx.asdf.extension.WeldxAsdfExtension
+    software: !core/software-1.0.0 {name: '', version: ''}
   - !core/extension_metadata-1.0.0
     extension_class: weldx.asdf.extension.WeldxExtension
     software: !core/software-1.0.0 {name: '', version: ''}
   - !core/extension_metadata-1.0.0
-    extension_class: weldx.asdf.extension.WeldxAsdfExtension
-    software: !core/software-1.0.0 {name: '', version: ''}
+    extension_class: asdf.extension.BuiltinExtension
+    software: !core/software-1.0.0 {name: asdf, version: 2.6.0}
 obj: !<tag:weldx.bam.de:weldx/debug/validator_testclass-1.0.0>
   length_prop: !unit/quantity-1.1.0 {unit: inch, value: 1}
   velocity_prop: !unit/quantity-1.1.0 {unit: kilometer / second, value: 2}
@@ -38,4 +38,5 @@ obj: !<tag:weldx.bam.de:weldx/debug/validator_testclass-1.0.0>
         datatype: float64
         shape: [3, 3]
     q2: !unit/quantity-1.1.0 {unit: meter ** 3, value: 2}
+  simple_prop: {unit: m, value: 3.0}
 ...
