--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/iso_groove-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/iso_groove-1.0.0.yaml
@@ -115,8 +115,6 @@ anyOf:
             $ref: "#/definitions/root-gap"
           c:
             $ref: "#/definitions/root-face"
-#            wx_unit_validate: true
-#            wx_unit: "m"
 
         required: [t, alpha, b, c]
     required: [type, components]
@@ -373,18 +371,17 @@ anyOf:
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
-wx_unit_validate: allow_missing
-wx_unit:
-  components:
-    t: "m"
-    t_1: "m"
-    t_2: "m"
-    alpha: "degree"
-    beta: "degree"
-    beta_1: "degree"
-    beta_2: "degree"
-    R: "m"
-    R2: "m"
-    b: "m"
-    c: "m"
+#wx_unit:
+#  components:
+#    t: "m"
+#    t_1: "m"
+#    t_2: "m"
+#    alpha: "degree"
+#    beta: "degree"
+#    beta_1: "degree"
+#    beta_2: "degree"
+#    R: "m"
+#    R2: "m"
+#    b: "m"
+#    c: "m"
 ...
