replace const with enum

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/iso_groove-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/iso_groove-1.0.0.yaml
@@ -59,7 +59,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: IGroove
+        enum: [IGroove]
       components:
         type: object
         properties:
@@ -78,7 +78,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: SingleUGroove
+        enum: [SingleUGroove]
       components:
         type: object
         properties:
@@ -103,7 +103,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: SingleVGroove
+        enum: [SingleVGroove]
       components:
         type: object
         properties:
@@ -126,7 +126,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: UVGroove
+        enum: [UVGroove]
       components:
         type: object
         properties:
@@ -153,7 +153,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: VVGroove
+        enum: [VVGroove]
       components:
         type: object
         properties:
@@ -178,7 +178,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: HVGroove
+        enum: [HVGroove]
       components:
         type: object
         properties:
@@ -201,7 +201,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: HUGroove
+        enum: [HUGroove]
       components:
         type: object
         properties:
@@ -226,7 +226,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: DoubleVGroove
+        enum: [DoubleVGroove]
       components:
         type: object
         properties:
@@ -257,7 +257,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: DoubleUGroove
+        enum: [DoubleUGroove]
       components:
         type: object
         properties:
@@ -290,7 +290,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: DoubleHVGroove
+        enum: [DoubleHVGroove]
       components:
         type: object
         properties:
@@ -319,7 +319,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: DoubleHUGroove
+        enum: [DoubleHUGroove]
       components:
         type: object
         properties:
@@ -352,7 +352,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: FFGroove
+        enum: [FFGroove]
       components:
         type: object
         properties:
