Add time support for netcdf types

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/netcdf/variable-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/netcdf/variable-1.0.0.yaml
@@ -14,12 +14,14 @@ properties:
     type: string
   shape:
     type: array
+  dtype:
+    type: string
   data:
     $ref: tag:stsci.edu:asdf/core/ndarray-1.0.0
 
 
-required: [name, shape, data]
-propertyOrder: [name, shape, data]
+required: [name, shape, dtype, data]
+propertyOrder: [name, shape, dtype, data]
 flowStyle: block
 additionalProperties: false
 ...
