--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -26,6 +26,7 @@ excluded_words:
   - versioneer
   - isort
   - networkx
+  - dpath
   # matplotlib ----------------------------------
   - pyplot
   - gca
