--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/netcdf/file_format-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/netcdf/file_format-1.0.0.yaml
@@ -10,15 +10,25 @@ description: |
   TODO: DESCRIPTION
 type: object
 properties:
+  attributes:
+    type: array
+    items:
+      $ref: "tag:weldx.bam.de:weldx/core/netcdf/attribute-1.0.0"
   dimensions:
     type: array
     items:
       $ref: "tag:weldx.bam.de:weldx/core/netcdf/dimension-1.0.0"
+  coordinates:
+    type: array
+    items:
+      $ref: "tag:weldx.bam.de:weldx/core/netcdf/variable-1.0.0"
+  variables:
+    type: array
+    items:
+      $ref: "tag:weldx.bam.de:weldx/core/netcdf/variable-1.0.0"
 
-
-
-required: []
-
+required: [dimensions, coordinates, variables]
+propertyOrder: [attributes, dimensions, coordinates, variables]
 flowStyle: block
-additionalProperties: true
+additionalProperties: false
 ...
