Set additionalProperties to False in multiple schemas

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/netcdf/attribute-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/netcdf/attribute-1.0.0.yaml
@@ -20,5 +20,5 @@ required: [name, data]
 propertyOrder: [name, data]
 
 flowStyle: block
-additionalProperties: true
+additionalProperties: false
 ...
