--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/xarray/data_array-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/xarray/data_array-1.0.0.yaml
@@ -31,5 +31,5 @@ propertyOrder: [attributes, coordinates, variables]
 
 
 flowStyle: block
-additionalProperties: true
+additionalProperties: false
 ...
