Rename and move some files and classes

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/dimension-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/dimension-1.0.0.yaml
@@ -1,8 +1,8 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/core/netcdf/dimension-1.0.0"
-tag: "tag:weldx.bam.de:weldx/core/netcdf/dimension-1.0.0"
+id: "http://weldx.bam.de/schemas/weldx/core/dimension-1.0.0"
+tag: "tag:weldx.bam.de:weldx/core/dimension-1.0.0"
 
 title: |
   Schema that describes a NetCDF dimension
