--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/dataset-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/dataset-1.0.0.yaml
@@ -1,11 +1,11 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/core/netcdf/file_format-1.0.0"
-tag: "tag:weldx.bam.de:weldx/core/netcdf/file_format-1.0.0"
+id: "http://weldx.bam.de/schemas/weldx/core/dataset-1.0.0"
+tag: "tag:weldx.bam.de:weldx/core/dataset-1.0.0"
 
 title: |
-  Schema that describes a NetCDF file format conform data structure
+  Schema that describes a dataset
 description: |
   TODO: DESCRIPTION
 type: object
@@ -13,19 +13,19 @@ properties:
   attributes:
     type: array
     items:
-      $ref: "tag:weldx.bam.de:weldx/core/netcdf/attribute-1.0.0"
+      $ref: "tag:weldx.bam.de:weldx/core/attribute-1.0.0"
   dimensions:
     type: array
     items:
-      $ref: "tag:weldx.bam.de:weldx/core/netcdf/dimension-1.0.0"
+      $ref: "tag:weldx.bam.de:weldx/core/dimension-1.0.0"
   coordinates:
     type: array
     items:
-      $ref: "tag:weldx.bam.de:weldx/core/netcdf/variable-1.0.0"
+      $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
   variables:
     type: array
     items:
-      $ref: "tag:weldx.bam.de:weldx/core/netcdf/variable-1.0.0"
+      $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
 
 required: [dimensions, coordinates, variables]
 propertyOrder: [attributes, dimensions, coordinates, variables]
