add quantity/pint support for variable-1.0.0.yaml

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/variable-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/variable-1.0.0.yaml
@@ -17,7 +17,9 @@ properties:
   dtype:
     type: string
   data:
-    $ref: tag:stsci.edu:asdf/core/ndarray-1.0.0
+    anyOf:
+      - $ref: tag:stsci.edu:asdf/core/ndarray-1.0.0
+      - $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
 
 
 required: [name, dimensions, dtype, data]
