--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/data_array-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/data_array-1.0.0.yaml
@@ -5,21 +5,27 @@ id: "http://weldx.bam.de/schemas/weldx/core/data_array-1.0.0"
 tag: "tag:weldx.bam.de:weldx/core/data_array-1.0.0"
 
 title: |
-  Schema to serialize a data_array
+  Schema that describes a data_array
 description: |
-  TODO: DESCRIPTION
+  A data_array is an array with named dimensions and coordinates. The corresponding Python data strucuture
+  is the xarray.DataArray which is inspired by the NetCDF file format
+  (See: https://www.unidata.ucar.edu/software/netcdf/docs/netcdf_data_model.html).
 type: object
 properties:
   attributes:
-    type: array
-    items:
-      $ref: "tag:weldx.bam.de:weldx/core/attribute-1.0.0"
+    describtion: |
+      An arbitrary structure containing meta data.
+    type: object
   coordinates:
+    description: |
+      An array of variables that represent coordinates.
     type: array
     items:
       $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
   variables:
-      $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
+    description: |
+      The actual data.
+    $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
 
 required: [attributes, coordinates, variables]
 propertyOrder: [attributes, coordinates, variables]
