--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/dataset-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/dataset-1.0.0.yaml
@@ -7,22 +7,30 @@ tag: "tag:weldx.bam.de:weldx/core/dataset-1.0.0"
 title: |
   Schema that describes a dataset
 description: |
-  TODO: DESCRIPTION
+  A dataset is a structure that gathers multiple data with common dimensions. The corresponding Python data strucuture
+  is the xarray.Dataset which is inspired by the NetCDF file format
+  (See: https://www.unidata.ucar.edu/software/netcdf/docs/netcdf_data_model.html).
 type: object
 properties:
   attributes:
-    type: array
-    items:
-      $ref: "tag:weldx.bam.de:weldx/core/attribute-1.0.0"
+    describtion: |
+      An arbitrary structure containing meta data.
+    type: object
   dimensions:
+    description: |
+      An array of dimensions.
     type: array
     items:
       $ref: "tag:weldx.bam.de:weldx/core/dimension-1.0.0"
   coordinates:
+    description: |
+      An array of variables that represent coordinates.
     type: array
     items:
       $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
   variables:
+    description: |
+      An array of variables.
     type: array
     items:
       $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
