--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/dimension-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/dimension-1.0.0.yaml
@@ -5,14 +5,19 @@ id: "http://weldx.bam.de/schemas/weldx/core/dimension-1.0.0"
 tag: "tag:weldx.bam.de:weldx/core/dimension-1.0.0"
 
 title: |
-  Schema that describes a NetCDF dimension
+  Schema that describes a dimension
 description: |
-  TODO: DESCRIPTION
+  This class is a slight modification of the corresponding NetCDF datamodel item.
+  (See https://www.unidata.ucar.edu/software/netcdf/docs/netcdf_data_model.html)
 type: object
 properties:
   name:
+    description: |
+      Name of the dimension.
     type: string
   length:
+    description: |
+      Length of the dimension.
     type: integer
 
 
