--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/data_array-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/data_array-1.0.0.yaml
@@ -22,13 +22,13 @@ properties:
     type: array
     items:
       $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
-  variables:
+  data:
     description: |
       The actual data.
     $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
 
-required: [attributes, coordinates, variables]
-propertyOrder: [attributes, coordinates, variables]
+required: [attributes, coordinates, data]
+propertyOrder: [attributes, coordinates, data]
 
 
 
