ignore .vulture_whitelist.py for flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,8 @@ per-file-ignores =
     aws_setup.py:E501
 exclude =
     versioneer.py,
-    __init__.py
+    __init__.py,
+    .vulture_whitelist.py
 
 [pydocstyle]
 match = (?!__)(?!versioneer)(?!_version).*\.py
