--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/data_array-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/data_array-1.0.0.yaml
@@ -7,13 +7,13 @@ tag: "tag:weldx.bam.de:weldx/core/data_array-1.0.0"
 title: |
   Schema that describes a data_array
 description: |
-  A data_array is an array with named dimensions and coordinates. The corresponding Python data strucuture
+  A data_array is an array with named dimensions and coordinates. The corresponding Python data structure
   is the xarray.DataArray which is inspired by the NetCDF file format
   (See: https://www.unidata.ucar.edu/software/netcdf/docs/netcdf_data_model.html).
 type: object
 properties:
   attributes:
-    describtion: |
+    description: |
       An arbitrary structure containing meta data.
     type: object
   coordinates:
