--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/variable-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/variable-1.0.0.yaml
@@ -27,13 +27,14 @@ properties:
   data:
     description: |
       An n-dimensional array that contains the data.
-    anyOf:
-      - $ref: tag:stsci.edu:asdf/core/ndarray-1.0.0
-      - $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
-
+    $ref: tag:stsci.edu:asdf/core/ndarray-1.0.0
+  unit:
+    description: |
+      Optional field describing the unit of the data as valid string representation.
+    type: string
 
 required: [name, dimensions, dtype, data]
-propertyOrder: [name, dimensions, dtype, data]
+propertyOrder: [name, dimensions, dtype, unit, data]
 flowStyle: block
 additionalProperties: false
 ...
