--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/data_processor-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/data_processor-1.0.0.yaml
@@ -12,19 +12,15 @@ type: object
 properties:
   name:
     type: string
-  input_signal_type:
-    type: string
-  input_unit:
-    type: string
-  output_signal_type:
-    type: string
-  output_unit:
-    type: string
+  input_signal:
+    $ref: "tag:weldx.bam.de:weldx/measurement/signal-1.0.0"
+  output_signal:
+    $ref: "tag:weldx.bam.de:weldx/measurement/signal-1.0.0"
   error:
     $ref: "tag:weldx.bam.de:weldx/measurement/error-1.0.0"
 
-propertyOrder: [name, input_unit, output_unit, error]
-required: [name, input_unit, output_unit]
+propertyOrder: [name, input_signal, output_signal, error]
+required: [name, input_signal, output_signal]
 
 flowStyle: block
 additionalProperties: false
