Add serialization of mathematical function parameters

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/mathematical_expression-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/mathematical_expression-1.0.0.yaml
@@ -12,9 +12,11 @@ type: object
 properties:
   expression:
     type: string
+  parameters:
+    type: object
 
 required: [expression]
-propertyOrder: [expression]
+propertyOrder: [expression, parameters]
 flowStyle: block
 additionalProperties: false
 ...
