--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - numpy>=1.18
   - pandas>=1.0
   - scipy>=1.4
-  - sympy>=1.6
+  #- sympy>=1.6
   - xarray>=0.15
   - pint>=0.11
   - bottleneck
