add example notebook with quantities

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/data_transformation-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/data_transformation-1.0.0.yaml
@@ -23,5 +23,5 @@ propertyOrder: [name, input_signal, output_signal, error]
 required: [name, input_signal, output_signal]
 
 flowStyle: block
-additionalProperties: false
+additionalProperties: true
 ...
