--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_data-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_data-1.0.0.yaml
@@ -5,16 +5,22 @@ id: "http://weldx.bam.de/schemas/weldx/core/transformations/coordinate_system_da
 tag: "tag:weldx.bam.de:weldx/core/transformations/coordinate_system_data-1.0.0"
 
 title: |
-  TODO
+  Schema that describes a coordinate system inside of an coordinate system hierarchy
 description: |
   TODO
 type: object
 properties:
   name:
+    description: |
+      Name of the coordinate system
     type: string
   reference_system:
+    description: |
+      Name of the parent system
     type: string
   data:
+    description: |
+      Data that describes the orientation and position of the coordinate system towards its parent system.
     $ref: "tag:weldx.bam.de:weldx/core/transformations/local_coordinate_system-1.0.0"
 
 propertyOrder: [name, reference_system, data]
@@ -22,10 +28,4 @@ required: [name, reference_system, data]
 flowStyle: block
 additionalProperties: false
 
-#wx_shape_validate: true
-#wx_shape:
-#  orientation:
-#    data: [3, 3]
-#  coordinates:
-#    data: [3]
 ...
